[metadata]
name = smac
version = 0.9.0
author = Marius Lindauer, Matthias Feurer, Katharina Eggensperger, Aaron Klein, Stefan Falkner and Frank Hutter
author_email = "fh@cs.uni-freiburg.de"
description = SMAC3, a Python implementation of 'Sequential Model-based Algorithm Configuration'.
long_description = file: README.md, CHANGELOG.md, LICENSE
license = 3-clause BSD
keywords = machine learning, algorithm configuration, hyperparameter optimization, tuning
classifiers=
        Development Status :: 3 - Alpha
        Topic :: Utilities
        Topic :: Scientific/Engineering
        Topic :: Scientific/Engineering :: Artificial Intelligence
        License :: OSI Approved :: BSD License
platforms = Linux

[options]
packages = find:

[options.packages.find]
exclude = test

[options.entry_points]
console_scripts =
    smac = smac.smac_cli:cmd_line_call